# meshscapes

./: .gitignore  AGENTS.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: static.yml
docs/: about.md  index.md
docs/experiments/: overview.md
docs/notebooks/: example.ipynb
docs/styles/: extra.css
docs/tutorials/: intro.md
meshscapes.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
