[project]
name = "meshscapes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mkdocs-material>=9.6.14",
]
[project.entry-points."mkdocs.plugins"]
nbconvert = "mkdocs_nbconvert.plugin:NbConvertPlugin"
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
